--- a/NYC_taxi/partition_data.ipynb
+++ b/NYC_taxi/partition_data.ipynb
@@ -19,9 +19,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/05/11 21:57:31 WARN Utils: Your hostname, HuyLes-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.1.5 instead (on interface en0)\n",
-      "22/05/11 21:57:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "22/05/11 21:58:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/06/12 21:33:55 WARN Utils: Your hostname, HuyLes-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.1.6 instead (on interface en0)\n",
+      "22/06/12 21:33:55 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "22/06/12 21:34:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -34,22 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+\n",
-      "|VendorID|tpep_pickup_datetime|tpep_dropoff_datetime|passenger_count|trip_distance|RatecodeID|store_and_fwd_flag|PULocationID|DOLocationID|payment_type|fare_amount|extra|mta_tax|tip_amount|tolls_amount|improvement_surcharge|total_amount|congestion_surcharge|\n",
-      "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+\n",
-      "|       1| 2020-03-01 00:31:13|  2020-03-01 01:01:42|              1|         4.70|         1|                 N|          88|         255|           1|         22|    3|    0.5|         2|           0|                  0.3|        27.8|                 2.5|\n",
-      "|       2| 2020-03-01 00:08:22|  2020-03-01 00:08:49|              1|          .00|         1|                 N|         193|         193|           2|        2.5|  0.5|    0.5|         0|           0|                  0.3|         3.8|                   0|\n",
-      "|       1| 2020-03-01 00:52:18|  2020-03-01 00:59:16|              1|         1.10|         1|                 N|         246|          90|           1|          6|    3|    0.5|      1.95|           0|                  0.3|       11.75|                 2.5|\n",
-      "|       2| 2020-03-01 00:47:53|  2020-03-01 00:50:57|              2|          .87|         1|                 N|         151|         238|           1|          5|  0.5|    0.5|      1.76|           0|                  0.3|       10.56|                 2.5|\n",
-      "|       1| 2020-03-01 00:43:19|  2020-03-01 00:58:27|              0|         4.40|         1|                 N|          79|         261|           1|       16.5|    3|    0.5|      4.05|           0|                  0.3|       24.35|                 2.5|\n",
-      "+--------+--------------------+---------------------+---------------+-------------+----------+------------------+------------+------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+--------------------+\n",
+      "+--------+--------------------+---------------------+---------------+-------------+-------------------+------------------+----------+------------------+-------------------+------------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+\n",
+      "|VendorID|tpep_pickup_datetime|tpep_dropoff_datetime|passenger_count|trip_distance|   pickup_longitude|   pickup_latitude|RateCodeID|store_and_fwd_flag|  dropoff_longitude|  dropoff_latitude|payment_type|fare_amount|extra|mta_tax|tip_amount|tolls_amount|improvement_surcharge|total_amount|\n",
+      "+--------+--------------------+---------------------+---------------+-------------+-------------------+------------------+----------+------------------+-------------------+------------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+\n",
+      "|       2| 2015-01-15 19:05:39|  2015-01-15 19:23:42|              1|         1.59|   -73.993896484375|40.750110626220703|         1|                 N|-73.974784851074219|40.750617980957031|           1|         12|    1|    0.5|      3.25|           0|                  0.3|       17.05|\n",
+      "|       1| 2015-01-10 20:33:38|  2015-01-10 20:53:28|              1|         3.30| -74.00164794921875|  40.7242431640625|         1|                 N|-73.994415283203125|40.759109497070313|           1|       14.5|  0.5|    0.5|         2|           0|                  0.3|        17.8|\n",
+      "|       1| 2015-01-10 20:33:38|  2015-01-10 20:43:41|              1|         1.80|-73.963340759277344|40.802787780761719|         1|                 N|-73.951820373535156|40.824413299560547|           2|        9.5|  0.5|    0.5|         0|           0|                  0.3|        10.8|\n",
+      "|       1| 2015-01-10 20:33:39|  2015-01-10 20:35:31|              1|          .50|-74.009086608886719|40.713817596435547|         1|                 N|-74.004325866699219|40.719985961914063|           2|        3.5|  0.5|    0.5|         0|           0|                  0.3|         4.8|\n",
+      "|       1| 2015-01-10 20:33:39|  2015-01-10 20:52:58|              1|         3.00|-73.971176147460938|40.762428283691406|         1|                 N|-74.004180908203125|40.742652893066406|           2|         15|  0.5|    0.5|         0|           0|                  0.3|        16.3|\n",
+      "+--------+--------------------+---------------------+---------------+-------------+-------------------+------------------+----------+------------------+-------------------+------------------+------------+-----------+-----+-------+----------+------------+---------------------+------------+\n",
       "only showing top 5 rows\n",
       "\n",
       "root\n",
@@ -58,10 +58,12 @@
       " |-- tpep_dropoff_datetime: string (nullable = true)\n",
       " |-- passenger_count: string (nullable = true)\n",
       " |-- trip_distance: string (nullable = true)\n",
-      " |-- RatecodeID: string (nullable = true)\n",
+      " |-- pickup_longitude: string (nullable = true)\n",
+      " |-- pickup_latitude: string (nullable = true)\n",
+      " |-- RateCodeID: string (nullable = true)\n",
       " |-- store_and_fwd_flag: string (nullable = true)\n",
-      " |-- PULocationID: string (nullable = true)\n",
-      " |-- DOLocationID: string (nullable = true)\n",
+      " |-- dropoff_longitude: string (nullable = true)\n",
+      " |-- dropoff_latitude: string (nullable = true)\n",
       " |-- payment_type: string (nullable = true)\n",
       " |-- fare_amount: string (nullable = true)\n",
       " |-- extra: string (nullable = true)\n",
@@ -70,13 +72,12 @@
       " |-- tolls_amount: string (nullable = true)\n",
       " |-- improvement_surcharge: string (nullable = true)\n",
       " |-- total_amount: string (nullable = true)\n",
-      " |-- congestion_surcharge: string (nullable = true)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "path = \"/Users/huyle/Documents/Data/2020/yellow_tripdata_2020-03.csv\" \n",
+    "path = \"/Users/huyle/Desktop/test_folder/taxi_trip_data/yellow_tripdata_2015-01.csv\" \n",
     "df = spark.read.option(\"header\", True).csv(path=path)\n",
     "\n",
     "df.show(5)\n",
@@ -85,7 +86,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.where(col(\"RatecodeID\").isNull()).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +125,7 @@
     }
    ],
    "source": [
-    "df.repartition(30).write.mode(\"overwrite\").csv(\"/Users/huyle/Desktop/test_folder/taxi_trip_data/2020_repatition/month=03\")"
+    "df.repartition(180).write.mode(\"overwrite\").csv(\"/Users/huyle/Desktop/test_folder/taxi_trip_data/2015/month=01\")"
    ]
   },
   {
